--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2>Medication Administration Record</h2>
     <div class="tabs">
         <button onclick="openTab('orders')" class="active">Orders</button>
-        <button onclick="openTab('mar')">MAR</button>
+        <button onclick="openTab('hp')">H&P</button>
         <button onclick="openTab('nurseNotes')">Nurse Notes</button>
         <button onclick="openTab('patientInfo')">Patient Info</button>
     </div>
@@ -95,12 +95,14 @@
         </table>
     </div>
 
-    <div id="mar" class="tab">
-        <h3>Medication Administration Record (MAR)</h3>
+    <div id="hp" class="tab">
+        <h3>History & Physical (H&P)</h3>
         <table>
-            <tr><th>Date & Time</th><td>03/25/2025 - 08:00 AM</td></tr>
-            <tr><th>Administered By</th><td>Nurse Jane</td></tr>
-            <tr><th>Notes</th><td>No adverse reactions</td></tr>
+            <tr><th>Chief Complaint</th><td>Cough and fever</td></tr>
+            <tr><th>History of Present Illness</th><td>Patient presents with a 3-day history of cough, fever, and sore throat.</td></tr>
+            <tr><th>Past Medical History</th><td>Hypertension, Seasonal Allergies</td></tr>
+            <tr><th>Surgical History</th><td>Appendectomy (2010)</td></tr>
+            <tr><th>Family History</th><td>Father with hypertension, mother with diabetes</td></tr>
         </table>
     </div>
 
